reconfigured profile boxes so that profile is above thumbnail grid. need to fix padding, spacing, margins still.

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -189,7 +189,7 @@ img{
 
 .square-thumb {
 	padding: 15px 0;
-	width: 100% !important;
+	width: 100% ;
 	height: auto !important;
 }
 
@@ -220,7 +220,6 @@ footer{
 	margin: 45px 0 0 0;
 	padding: 15px;
 }
-
 
 // ************************************************************************************************************
 // helpers
@@ -312,7 +311,7 @@ footer{
 
 .row {
 	padding: 0;
-	margin: 0 -15px;
+	margin: 0;
 }
 
 .row:before,
